--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,8 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
+  width: 100%;
   text-align: center;
 }
 
